<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="com.ruili.target.activitys.MainActivity" >

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21.76dp"
        android:layout_marginStart="21.76dp"
        android:singleLine="true"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:text="@string/operator_name" />
    <ImageButton
        android:id="@+id/imgbtn_settings"
        android:layout_width="@dimen/main_settings_button_width"
        android:layout_height="@dimen/main_settings_button_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21.76dp"
        android:layout_marginEnd="21.76dp"
        android:background="@drawable/ic_settings"
        android:contentDescription="@string/action_settings" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/main_buttons_margin_bottom"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_today_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/main_buttons_distance"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imgbtn_today_targets"
                android:layout_width="@dimen/main_buttons_width"
                android:layout_height="@dimen/main_buttons_height"
                android:background="@drawable/ic_today_targets"
                android:contentDescription="@string/today_targets"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="@dimen/main_buttons_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_button_text_distance"
                android:gravity="center"
                android:text="@string/today_targets" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_history_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imgbtn_history_targets"
                android:layout_width="@dimen/main_buttons_width"
                android:layout_height="@dimen/main_buttons_height"
                android:background="@drawable/ic_history_targets"
                android:contentDescription="@string/history_targets"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="@dimen/main_buttons_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_button_text_distance"
                android:gravity="center"
                android:text="@string/history_targets" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_inspect_supervise"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imgbtn_inspect_supervise"
                android:layout_width="@dimen/main_buttons_width"
                android:layout_height="@dimen/main_buttons_height"
                android:background="@drawable/ic_inspect_supervise"
                android:contentDescription="@string/inspect_supervise"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="@dimen/main_buttons_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_button_text_distance"
                android:gravity="center"
                android:text="@string/inspect_supervise" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>